# cmake

clang-blueprint/: .clang-tidy
clang-blueprint/src/: main.cpp
clang-blueprint/src/danger/: bad_examples.cpp
clang-blueprint/test/fact/: test_factorial.cpp
demo/: CMakeLists.txt  LICENSE
demo/app/test/: CMakeLists.txt
demo/src/world/: CMakeLists.txt  world.c
doc/: 在 linux 下使用 CMake 构建应用程序.html
example/cmake-templates/boost/: main.cpp
example/cmake_gtest_gcov/test/src/: CMakeLists.txt
example/cuda-image-filters/: CMakeLists.txt
t5/src/: test1.cpp  test1.h
t6/cmake/modules/: Findlibdb_cxx.cmake
t6/src/: CMakeLists.txt
test/t1/: CMakeLists.txt
test/t5/: CMakeLists.txt
test/t6/: CMakeLists.txt  main.cpp
test/t6/cmake/modules/: Findlibdb_cxx.cmake
test/t6/lib/: CMakeLists.txt
