PROJECT(main)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

#SET (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_ROOT}/Modules ${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules)
SET (CMAKE_MODULE_PATH  ${CMAKE_SOURCE_DIR}/cmake/modules)
FIND_PACKAGE(libdb_cxx REQUIRED)

MESSAGE( ${CMAKE_MODULE_PATH} )
MESSAGE( ${CMAKE_SOURCE_DIR} )
MESSAGE( ${CMAKE_CURRENT_SOURCE_DIR} )


ADD_SUBDIRECTORY( src )
ADD_SUBDIRECTORY( lib )
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
ADD_EXECUTABLE(main ${DIR_SRCS})

SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
#SET(EXECUTABLE_OUTPUT_PATH bin)
SET(LIBRARY_OUTPUT_PATH lib)

MARK_AS_ADVANCED(
	LIBDB_CXX_INCLUDE_DIR
	LIBDB_CXX_LIBRARIES
)
IF (LIBDB_CXX_INCLUDE_DIR AND LIBDB_CXX_LIBRARIES)
	MESSAGE(STATUS "Found libdb libraries")
	INCLUDE_DIRECTORIES(${LIBDB_CXX_INCLUDE_DIR})
	MESSAGE( ${LIBDB_CXX_LIBRARIES} )
	TARGET_LINK_LIBRARIES(main hello ${LIBDB_CXX_LIBRARIES} )
ENDIF (LIBDB_CXX_INCLUDE_DIR AND LIBDB_CXX_LIBRARIES)
